# GA-aided-NMPC-tuning

./: .gitignore  CMakeLists.txt  setup.bash
include/: helloworld.h  pch.h
include/utils/: config_handler.hpp  json_logger.hpp  progress_bar.hpp
src/: helloworld.cpp  main.cpp
